--- a/assets/src/scss/layout/navbar/_burger-menu.scss
+++ b/assets/src/scss/layout/navbar/_burger-menu.scss
@@ -74,7 +74,7 @@ $transition-duration: .2s;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: var(--top-navigation--separation, 1px solid rgba(0, 0, 0, 0.2));
   padding-block-end: $sp-2;
 
   .site-logo {
@@ -120,7 +120,7 @@ $transition-duration: .2s;
   margin-top: auto;
   width: 100%;
   padding: $sp-3 0 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-top: var(--top-navigation--separation, 1px solid rgba(0, 0, 0, 0.2));
 
   .btn-donate {
     width: 100%;
