Follow up review
- Don't decorate standalone links when hovered

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -84,6 +84,7 @@ a:where(.standalone-link) {
 
   &:hover {
     box-shadow: inset 0 calc(-22px) var(--gp-green-100);
+    text-decoration: none !important;
   }
 }
 
