--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -121,6 +121,18 @@ table.spreadsheet-table.is-color-gp-green {
   }
 }
 
+a:where(.standalone-link) {
+  width: fit-content;
+  border-bottom: 2px solid var(--gp-green-500);
+  font-weight: 700 !important;
+  transition: 0.3s cubic-bezier(0.5, 0, 0, 1);
+
+  &:hover {
+    box-shadow: inset 0 calc(-22px) var(--gp-green-100);
+    text-decoration: none !important;
+  }
+}
+
 // Colors for transparent buttons.
 $palette: (
   "green-400": var(--gp-green-400),
