--- a/assets/src/scss/blocks/ActionsList.scss
+++ b/assets/src/scss/blocks/ActionsList.scss
@@ -1,30 +1,52 @@
 .actions-list {
   margin-bottom: $sp-4;
 
+  & > .wp-block-heading, & > p {
+    width: 100%;
+  }
+
   .wp-block-post {
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.16);
     transition: box-shadow 0.2s;
     border-radius: 4px;
-    background: white;
+    background: var(--white);
     cursor: pointer;
     overflow: hidden;
-    justify-content: space-between;
     display: flex;
     flex-direction: column;
+    min-height: 490px;
 
     &:hover {
       box-shadow: 0 1px 8px rgba(0, 0, 0, 0.32);
+    }
+
+    .read-more-nav {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: auto;
+
+      a {
+        margin-bottom: 0;
+        margin-inline-end: 0;
+      }
+    }
+
+    & > *:first-child:not(.wp-block-post-featured-image) {
+      // This padding-top is added only when the figure is not being rendered
+      padding-top: calc(196px + $sp-3);
+
+      @include large-and-up {
+        padding-top: calc(220px + $sp-3);
+      }
     }
   }
 
   .wp-block-group.is-layout-flow {
     padding: $sp-3;
-    height: 100%;
   }
 
   .wp-block-post-title {
     font-size: 20px;
-    font-weight: bold;
     margin-bottom: 0;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -61,5 +83,22 @@
   .wp-block-group .btn-primary {
     margin-bottom: $sp-3;
     margin-inline-end: $sp-3;
+  }
+
+  &.is-custom-layout-grid {
+    display: block !important;
+
+    .wp-block-post-template {
+      display: grid;
+      gap: $sp-2;
+
+      @include medium-and-up {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+
+      @include large-and-up {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
   }
 }
